[project]
name = "go-bluetooth"
version = "1.0.0"
authors = [
	{ name = "Maud Spierings", email = "maudspierings@gocontroll.com" }
]
description = "The backend for the GOcontroll Configuration android app"
classifiers = [
]
requires-python = ">=3.13"
dependencies = [
	"bluedot",
	"pymoduline",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/GOcontroll/go-bluetooth"


